<resources>
    <string name="app_name">TechTrix \'22</string>
    <string name="google_sign_in_id">129159196199-buus42eevd7mv7u9tn8rqh1foev9k1g8.apps.googleusercontent.com</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="registrations">Registrations</string>
    <string name="home">Home</string>
    <string name="hello_guest">Hello, Guest!</string>
    <string name="search_hint">Search by events or categories</string>
    <string name="countdown">Countdown</string>
    <string name="flagship_events">Flagship Events</string>
    <string name="categories">Categories</string>
    <string name="popular_events">Popular Events</string>
    <string name="event_start_date">07/04/2022</string>
    <string name="dummy_category">Gaming</string>
    <string name="show_all">Show All</string>
    <string name="dummy_event">Need for speed</string>
    <string name="dummy_event_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="trending">Trending</string>
    <string name="registration_info">All payments will be handled at the registration desk.</string>
    <string name="no_login">Look\'s like you\'ve not logged in yet.</string>
    <string name="login">Login</string>
    <string name="paid">Paid</string>
    <string name="general_fees">General Fees</string>
    <string name="rs_20">₹20</string>
    <string name="dummy_date">16h ago</string>
    <string name="guest">Guest</string>
    <string name="event_reminder">Event Reminder</string>
    <string name="announcements">Announcements</string>
    <string name="about">About</string>
    <string name="sponsors">Sponsors</string>
    <string name="team">Team</string>
    <string name="dummy_version">1.0.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_login_event">Looks like you’ve not logged in yet. Log in to register for the event.</string>
    <string name="description">Description</string>
    <string name="rules">Rules</string>
    <string name="contact">Contact</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="alt_phone">Alternate Phone Number</string>
    <string name="institution_organization">Institution/Organization</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="same_alt_number">Mark alternate number same as primary number.</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="no_notifications">Looks like there are no notifications yet.</string>
    <string name="check_all_events">Check All Events</string>
    <string name="server_error">Something went wrong!</string>
    <string name="qr_info">Show this QR code at the registration desk for payment.</string>
    <string name="map_location">https://www.google.com/maps/place/RCC+Institute+of+Information+Technology/@22.5592616,88.3942106,17z/data=!4m5!3m4!1s0x3a027686b848fb8d:0xed09795e4836e886!8m2!3d22.5592616!4d88.3964046</string>
    <string name="no_result_found">No results found</string>
    <string name="no_events_found">No events found</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="unpaid">Unpaid</string>
    <string name="all_events">All Events</string>
    <string name="no_reg_allowed">Looks like you’ve not logged in yet. Log in to register for the event.</string>
    <string name="no_reg_done">Looks like you have not registered for any event yet.</string>
    <string name="empty_unpaid_reg">Looks like you have paid for all the registered events.</string>
    <string name="empty_paid_reg">Looks like you\'ve not paid for any registrations yet.</string>
    <string name="team_name">Team Name</string>
    <string name="team_name_hint">Member’s name will be considered as team name.</string>
    <string name="dummy_email">example@xyz.com</string>
    <string name="reg_success">Registration successful. Check it out on your registrations tab.</string>
    <string name="reg_failure">All members haven\'t registered individually!</string>
    <string name="reg_email_info">Make sure every member has registered themselves individually.</string>
    <string name="default_notification_channel_id">techtrix</string>
    <string name="update_available">Update Available</string>
    <string name="update_message">To continue using the application, please make sure to update it.</string>
    <string name="update">Update</string>
</resources>