<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.orangeink.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_registrations"
        android:name="com.orangeink.registration.RegistrationsFragment"
        android:label="@string/registrations"
        tools:layout="@layout/fragment_registrations" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.orangeink.techtrix.notifications.ui.fragments.NotificationFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.orangeink.techtrix.profile.ui.fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.orangeink.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

</navigation>