<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:paddingHorizontal="@dimen/margin_16"
    android:paddingVertical="@dimen/margin_12">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_12"
            android:layout_toStartOf="@id/tv_date"
            android:letterSpacing="0.15"
            android:text="@string/general_fees"
            android:textAllCaps="true"
            android:textColor="@color/purple_400"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/dummy_date"
            android:textSize="@dimen/text_size_12" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_header"
        android:layout_marginTop="@dimen/margin_8"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/dummy_event_description"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_size_12" />

</RelativeLayout>