<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_16"
    android:layout_marginTop="@dimen/margin_12"
    android:background="@drawable/bg_rounded_event"
    android:gravity="center_vertical"
    android:paddingHorizontal="@dimen/padding_16"
    android:paddingVertical="@dimen/padding_12">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/iv_category_icon"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_tag_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_secondary"
                android:gravity="center_vertical"
                android:letterSpacing="0.1"
                android:paddingHorizontal="@dimen/padding_8"
                android:paddingVertical="@dimen/padding_2"
                android:text="@string/dummy_category"
                android:textAllCaps="true"
                android:textColor="@color/purple_400"
                android:textSize="@dimen/text_size_10"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_category_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_outline_sports_esports_24"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_header"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:letterSpacing="0.2"
        android:maxLines="1"
        android:text="@string/dummy_event"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_event_name"
        android:layout_marginTop="@dimen/margin_4"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14"
        tools:text="@string/categories" />

</RelativeLayout>